--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@theatre/core": "^0.5.0",
     "@theatre/studio": "^0.5.0",
     "@vueuse/nuxt": "^9.3.1",
+    "glslify": "^7.1.1",
     "howler": "latest",
     "mitt": "^3.0.0",
     "nuxt": "3.0.0-rc.12",
+    "postprocessing": "^6.29.0",
     "three": "latest",
     "tweakpane": "latest",
     "vite-plugin-glsl": "^0.5.2"
