--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@theatre/studio": "^0.5.0",
     "@vueuse/nuxt": "^9.3.1",
     "glslify": "^7.1.1",
+    "gsap": "^3.11.3",
     "howler": "latest",
     "mitt": "^3.0.0",
     "nuxt": "3.0.0-rc.12",
