--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "gsap": "^3.11.3",
     "howler": "latest",
     "mitt": "^3.0.0",
-    "nuxt": "3.0.0-rc.12",
+    "nuxt": "^3.0.0-rc.12",
     "postprocessing": "^6.29.0",
     "three": "latest",
     "tweakpane": "latest",
     "vite-plugin-glsl": "^0.5.2"
   },
   "devDependencies": {
+    "@types/three": "latest",
     "@tweakpane/core": "latest",
     "sass": "^1.49.8"
   }
