--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "@/classes/interfaces"
     ],
     "allowJs": true,
+    "strict": false,
     "suppressImplicitAnyIndexErrors": true
   }
 }
