--- a/assets/states-animations/Introduction.theatre-project-state.json
+++ b/assets/states-animations/Introduction.theatre-project-state.json
@@ -22,7 +22,7 @@
       },
       "sequence": {
         "subUnitsPerUnit": 30,
-        "length": 30.09,
+        "length": 112.94,
         "type": "PositionalSequence",
         "tracksByObject": {
           "camera": {
@@ -90,6 +90,78 @@
                       0
                     ],
                     "value": 3.8
+                  },
+                  {
+                    "id": "NE5uLaDjj3",
+                    "position": 34.067,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 14
+                  },
+                  {
+                    "id": "lDt_Cls5_u",
+                    "position": 40.733,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 10
+                  },
+                  {
+                    "id": "8Wceta4oJs",
+                    "position": 48.667,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 4
+                  },
+                  {
+                    "id": "oLie4SB4xT",
+                    "position": 54.167,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 2
+                  },
+                  {
+                    "id": "5tjJNKO6H1",
+                    "position": 58.3,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 7
+                  },
+                  {
+                    "id": "pHTKOdq6GH",
+                    "position": 94.567,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 15
                   }
                 ]
               },
@@ -244,6 +316,54 @@
                       0
                     ],
                     "value": 1.2900000000000051
+                  },
+                  {
+                    "id": "wc92pHCD-N",
+                    "position": 44.1,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 3
+                  },
+                  {
+                    "id": "kpvAEX-nnw",
+                    "position": 52,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 3
+                  },
+                  {
+                    "id": "CrBx5CZVOR",
+                    "position": 57.167,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 1.5
+                  },
+                  {
+                    "id": "p83e_7-45K",
+                    "position": 61.133,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 1
                   }
                 ]
               },
@@ -278,6 +398,54 @@
                   {
                     "id": "7VcLnmI_Ab",
                     "position": 28.233,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 1
+                  },
+                  {
+                    "id": "fUAio8kFDp",
+                    "position": 36.733,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 1
+                  },
+                  {
+                    "id": "Zym5Q7oYnp",
+                    "position": 40.933,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 5
+                  },
+                  {
+                    "id": "fdxCWNDdpo",
+                    "position": 56.8,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 1
+                  },
+                  {
+                    "id": "HQsWA1DTgh",
+                    "position": 94.6,
                     "connectedRight": true,
                     "handles": [
                       0.5,
@@ -331,6 +499,42 @@
                       0
                     ],
                     "value": 1
+                  },
+                  {
+                    "id": "DVCw1C7Ldf",
+                    "position": 35.8,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 1
+                  },
+                  {
+                    "id": "y3mIIvqahP",
+                    "position": 40.433,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 1.5
+                  },
+                  {
+                    "id": "djpdqetA11",
+                    "position": 54.7,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 1
                   }
                 ]
               }
@@ -354,6 +558,8 @@
   },
   "definitionVersion": "0.4.0",
   "revisionHistory": [
+    "m_dLPZhxi5jaweqY",
+    "8AWtL__tW7L3zOTE",
     "0GIPF_HgJ8qtaAs2",
     "oyXM89DvdIIbjLtu"
   ]
