--- a/assets/states-animations/Micro-anim.theatre-project-state.json
+++ b/assets/states-animations/Micro-anim.theatre-project-state.json
@@ -296,6 +296,7 @@
   },
   "definitionVersion": "0.4.0",
   "revisionHistory": [
+    "wSrlM7_GBkCIwiNs",
     "BgfyjdFlCLTInP5l",
     "Xlscy6aMkb86m6hZ",
     "sTDvJIbJYbtnzNjB"
