--- a/assets/states-animations/Introduction.theatre-project-state.json
+++ b/assets/states-animations/Introduction.theatre-project-state.json
@@ -96,7 +96,7 @@
                   },
                   {
                     "id": "NE5uLaDjj3",
-                    "position": 34.067,
+                    "position": 31.3,
                     "connectedRight": true,
                     "handles": [
                       0.5,
@@ -608,11 +608,11 @@
                       0.5,
                       0
                     ],
-                    "value": 1
+                    "value": 0
                   },
                   {
-                    "id": "28ga0n2rZA",
-                    "position": 0.967,
+                    "id": "QBUfl2052r",
+                    "position": 93.1,
                     "connectedRight": true,
                     "handles": [
                       0.5,
@@ -621,12 +621,36 @@
                       0
                     ],
                     "value": 0
+                  },
+                  {
+                    "id": "j53sqVMehl",
+                    "position": 100.033,
+                    "connectedRight": true,
+                    "handles": [
+                      0.5,
+                      1,
+                      0.5,
+                      0
+                    ],
+                    "value": 1
                   }
                 ]
               }
             },
             "trackIdByPropPath": {
               "[\"opacity\"]": "t0fd9M9B7d"
+            }
+          },
+          "credits": {
+            "trackData": {
+              "ZdQTffZlRk": {
+                "type": "BasicKeyframedTrack",
+                "__debugName": "credits:[\"opacity\"]",
+                "keyframes": []
+              }
+            },
+            "trackIdByPropPath": {
+              "[\"opacity\"]": "ZdQTffZlRk"
             }
           }
         }
@@ -635,6 +659,10 @@
   },
   "definitionVersion": "0.4.0",
   "revisionHistory": [
+    "5VWIPwH3lq79VYzU",
+    "H6bQ-uWKF_JetxSW",
+    "lRQ90fu3mFtXsn_M",
+    "6msGV-xFilslTns7",
     "2RseZ4TqifIQ1-BB",
     "9nYHEVVuF_vCrI56",
     "YtatyU_sqwzZQIqJ",
